--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -294,7 +294,7 @@ bestcost_pm_death_social_decile <-
 
 # Check that results did not change over time
 check_general(
-  a = bestcost_pm_death_social_decile[["detailed"]][["social"]]$value,
+  a = bestcost_pm_death_social_decile[["detailed"]][["social"]]$difference_value,
   # Results on 21 Nov 2024
   b = c( 203.54994443, 0.25284914, 142.64936990, 0.15052568,
          0.65578653, 0.05604937, 0.22984830, 0.01926640, 
