--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -51,8 +51,8 @@ devtools::load_all(export_all = FALSE)
 load("../testing/input/data/input_data_for_testing_Rpackage.RData")
 
 # Unit meeting demo
-data <- airqplus_pm_copd |> 
-  mutate(prevalence = incidents_per_100_000_per_year/1E5*population_at_risk)
+# data <- airqplus_pm_copd |> 
+#   mutate(prevalence = incidents_per_100_000_per_year/1E5*population_at_risk)
 ```
 
 
@@ -106,19 +106,19 @@ library(healthiar)
 ```{r Demo unit meeting}
 
 # Calculate COPD cases attributable to PM exposure
-results_pm_copd <-
-  healthiar::attribute_health(
-    exp_central = data$mean_concentration,                      # 8.85
-    cutoff_central = data$cut_off_value,                        # 5
-    bhd_central = data$prevalence,                              # 30747
-    bhd_lower = data$prevalence - 1000,                         # 29747
-    bhd_upper = data$prevalence + 1000,                         # 31747
-    rr_central = data$relative_risk,                            # 1.36
-    rr_lower = data$relative_risk_lower,                        # 1.124
-    rr_upper = data$relative_risk_upper,                        # 1.664
-    erf_increment = 10,                                           
-    erf_shape = "log_linear", 
-    info = "pm_copd_assessment_1")
+# results_pm_copd <-
+#   healthiar::attribute_health(
+#     exp_central = data$mean_concentration,                      # 8.85
+#     cutoff_central = data$cut_off_value,                        # 5
+#     bhd_central = data$prevalence,                              # 30747
+#     bhd_lower = data$prevalence - 1000,                         # 29747
+#     bhd_upper = data$prevalence + 1000,                         # 31747
+#     rr_central = data$relative_risk,                            # 1.36
+#     rr_lower = data$relative_risk_lower,                        # 1.124
+#     rr_upper = data$relative_risk_upper,                        # 1.664
+#     erf_increment = 10,                                           
+#     erf_shape = "log_linear", 
+#     info = "pm_copd_assessment_1")
 
 # Check results
 # View(results_pm_copd)
@@ -540,7 +540,7 @@ bestcost_pm_copd_with_summary_uncertainty <-
     rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear", 
-    summary_uncertainty = NULL
+    summary_uncertainty = TRUE
     )
 
 # View(bestcost_pm_copd_with_summary_uncertainty)
@@ -553,7 +553,7 @@ bestcost_pm_copd_extern_uncertainty <-
 print("Main estimates: ") ; bestcost_pm_copd_with_summary_uncertainty[["main"]][["impact_rounded"]]
 ## Summary uncertainty from internal function (initial implementation)
 print("Summary uncertainty estimates (intern calculation): ")
-round(as.numeric(bestcost_pm_copd_with_summary_uncertainty[["detailed"]][["uncertainty"]]), digits = 0)
+round(as.numeric(bestcost_pm_copd_with_summary_uncertainty[["detailed"]][["uncertainty"]][["intern"]]), digits = 0)
 ## With external uncertainty function (i.e. include_summary_uncertainty())
 print("Summary uncertainty estimates (extern uncertainty function): ")
 round(as.numeric(bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]][["main"]]), digits = 0)
@@ -690,16 +690,16 @@ bestcost_noise_ihd_expDist_iteration_uncertainty <- include_summary_uncertainty(
 
 # Check impacts per geo unit
 ## Central estimates from attribte()
-bestcost_noise_ihd_expDist_iteration[["detailed"]][["raw"]] |> filter(erf_ci == "central") |> filter(exp_ci == "central") |> select(geo_id_raw, impact_rounded) 
+round(as.numeric(bestcost_noise_ihd_expDist_iteration[["detailed"]][["raw"]] |> filter(erf_ci == "central") |> filter(exp_ci == "central") |> pull(impact_rounded)), digits = 0) 
 ## Summary uncertainty estimates from include_summary_uncertainty()
-as.numeric(bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]][["raw"]]$impact_central)
+round(as.numeric(bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]][["raw"]]$impact_central), digits = 0)
 # Results are higher due to difference in PAF of categories 2 & 3
 
 # Check aggregated impact
 print("Main estimate: ") ; bestcost_noise_ihd_expDist_iteration[["main"]][["impact_rounded"]]
 print("Summary uncertainty estimates (extern uncertainty function): ")
-round(as.numeric(bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]][["main"]]), digits = 0)
-# Results are higher due to difference in PAF of categories 2 & 3
+round(as.numeric(bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]][["main"]] |> pull(central_estimate)), digits = 0)
+# Aggregated results are higher due to difference in PAF of categories 2 & 3
 ```
 
 
@@ -733,10 +733,10 @@ bestcost_pm_yld_singlebhd_external_summary_uncertainty <- healthiar::include_sum
 # View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
 print("Main estimates: ") ; bestcost_pm_yld_singlebhd_with_summary_uncertainty[["main"]][["impact_rounded"]]
 print("Summary uncertainty estimates (internal function): ")
-round(as.numeric(bestcost_pm_yld_singlebhd_with_summary_uncertainty[["detailed"]][["uncertainty"]]), digits = 0)
-
+round(as.numeric(bestcost_pm_yld_singlebhd_with_summary_uncertainty[["detailed"]][["uncertainty"]][["intern"]]), digits = 0)
 print("Summary uncertainty estimates (external function): ")
 round(as.numeric(bestcost_pm_yld_singlebhd_external_summary_uncertainty[["detailed"]][["uncertainty"]][["main"]]), digits = 0)
+# Results seem plausible
 ```
 
 ```{r Summary uncertainty ar}
@@ -759,6 +759,8 @@ bestcost_noise_ha_ar_with_summary_uncertainty <-
     )
 # View(bestcost_noise_ha_ar_with_summary_uncertainty)
 
+bestcost_noise_ha_ar_external_uncertainty <- healthiar::include_summary_uncertainty(bestcost_noise_ha_ar_with_summary_uncertainty)
+
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 print("Main estimate: ")
 bestcost_noise_ha_ar_with_summary_uncertainty[["main"]][["impact_rounded"]]
@@ -766,15 +768,49 @@ bestcost_noise_ha_ar_with_summary_uncertainty[["main"]][["impact_rounded"]]
 print("Summary uncertainty central estimate (internal function): ")
 round(as.numeric(bestcost_noise_ha_ar_with_summary_uncertainty[["detailed"]][["uncertainty"]][["intern"]]), digits = 0)
 # External include_summary_uncertainty function
-bestcost_noise_ha_ar_external_uncertainty <- healthiar::include_summary_uncertainty(bestcost_noise_ha_ar_with_summary_uncertainty)
 print("Summary uncertainty estimates (extern uncertainty function): ")
 round(as.numeric(bestcost_noise_ha_ar_external_uncertainty[["detailed"]][["uncertainty"]][["main"]]), digits = 0)
-
+# Results seem plausible
 ```
 
 ```{r Summary uncertainty ar iteration}
-CONTINUE HERE
 
+# Get data
+niph_noise_ha_input <- 
+  niph_noise_ha_excel |>
+  dplyr::filter(!is.na(niph_noise_ha_excel$exposure_mean))
+
+# Internal get_ci function
+bestcost_noise_ha_ar_iteration <- 
+  healthiar::attribute_health_ar(
+    exp_central = list(niph_noise_ha_input$exposure_mean,
+                       niph_noise_ha_input$exposure_mean + 5,
+                       niph_noise_ha_input$exposure_mean + 10),
+    exp_lower = list(niph_noise_ha_input$exposure_mean -2,
+                       niph_noise_ha_input$exposure_mean + 5 - 2,
+                       niph_noise_ha_input$exposure_mean + 10 - 2),
+    exp_upper = list(niph_noise_ha_input$exposure_mean + 2,
+                       niph_noise_ha_input$exposure_mean + 5 + 2,
+                       niph_noise_ha_input$exposure_mean + 10 + 2),
+    pop_exp = list(niph_noise_ha_input$population_exposed_total, 
+                   niph_noise_ha_input$population_exposed_total + 0.1,
+                   niph_noise_ha_input$population_exposed_total + 0.2),
+    erf_eq_central = "78.9270-3.1162*c+0.0342*c^2",
+    geo_id_raw = 1:3, 
+    geo_id_aggregated = rep("CH", 3),
+    info = data.frame(pollutant = "road_noise", outcome = "highly_annoyance"),
+    )
+# View(bestcost_noise_ha_ar_with_summary_uncertainty)
+
+bestcost_noise_ha_ar_iteration_with_summary_uncertainty <-
+  healthiar::include_summary_uncertainty(res = bestcost_noise_ha_ar_iteration)
+
+# Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
+# View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
+print("Main estimates: ") ; bestcost_noise_ha_ar_iteration_with_summary_uncertainty[["main"]][["impact_rounded"]]
+print("Summary uncertainty estimates (external function): ")
+round(as.numeric(bestcost_noise_ha_ar_iteration_with_summary_uncertainty[["detailed"]][["uncertainty"]][["main"]]), digits = 0)
+# Results seem plausible
 ```
 
 
@@ -805,13 +841,11 @@ bestcost_pm_deaths_lifetable_airqplus_with_summary_uncertainty <-
 # View(bestcost_pm_deaths_lifetable_airqplus_with_summary_uncertainty)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
-print("Summary uncertainty central estimate: ")
-uncertainty <- bestcost_pm_deaths_lifetable_airqplus_with_summary_uncertainty[["detailed"]][["uncertainty"]]
-uncertainty[uncertainty$sex == "total", "central_estimate"] |>  pull()
-uncertainty[uncertainty$sex == "total", "lower_estimate"] |>  pull()
-uncertainty[uncertainty$sex == "total", "upper_estimate"] |>  pull()
 print("Main estimate: ")
 bestcost_pm_deaths_lifetable_airqplus_with_summary_uncertainty[["main"]][["impact_rounded"]] 
+print("Summary uncertainty central estimate: ")
+round(as.numeric(bestcost_pm_deaths_lifetable_airqplus_with_summary_uncertainty[["detailed"]][["uncertainty"]][["intern"]] |> filter(sex == "total") |> select(-sex)), digits = 0)
+# Results seem plausible
 ```
 
 
