--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -546,7 +546,9 @@ bestcost_pm_copd_with_summary_uncertainty <-
 # View(bestcost_pm_copd_with_summary_uncertainty)
 
 bestcost_pm_copd_extern_uncertainty <-
-  healthiar::include_summary_uncertainty(bestcost_pm_copd_with_summary_uncertainty)
+  healthiar::include_summary_uncertainty(
+    res = bestcost_pm_copd_with_summary_uncertainty,
+    n_sim = 100)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 ## Central estimates
@@ -589,7 +591,9 @@ check_bestcost(result_list_bestcost = bestcost_pm_copd_geo_short,
                result_vector_alternative = c(32449, 12508, 50836)) # Results on 5 November 2024
 
 bestcost_pm_copd_geo_short_uncertainty <- 
-  healthiar::include_summary_uncertainty(bestcost_pm_copd_geo_short)
+  healthiar::include_summary_uncertainty(
+    bestcost_pm_copd_geo_short,
+    n_sim = 100)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 print("Main estimate: ") ; bestcost_pm_copd_geo_short[["main"]][["impact_rounded"]]
@@ -632,7 +636,9 @@ bestcost_noise_ihd_expDist <-
 # View(bestcost_noise_ihd_expDist)
 
 # Calculate summary uncertainty
-bestcost_noise_ihd_expDist_extern_uncertainty <- include_summary_uncertainty(bestcost_noise_ihd_expDist)
+bestcost_noise_ihd_expDist_extern_uncertainty <- include_summary_uncertainty(
+  bestcost_noise_ihd_expDist,
+    n_sim = 100)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 print("Main estimate: ") ; bestcost_noise_ihd_expDist[["main"]][["impact_rounded"]]
@@ -684,7 +690,9 @@ bestcost_noise_ihd_expDist_iteration <-
     info = data.frame(pollutant = "road_noise", outcome = "YLD"))
 # View(bestcost_noise_ihd_expDist_iteration)
 
-bestcost_noise_ihd_expDist_iteration_uncertainty <- include_summary_uncertainty(bestcost_noise_ihd_expDist_iteration)
+bestcost_noise_ihd_expDist_iteration_uncertainty <- include_summary_uncertainty(
+  bestcost_noise_ihd_expDist_iteration,
+    n_sim = 100)
 # View(bestcost_noise_ihd_expDist_iteration_uncertainty)
 # Results are higher due to difference in PAF of categories 2 & 3
 
@@ -727,7 +735,9 @@ bestcost_pm_yld_singlebhd_with_summary_uncertainty  <-
     summary_uncertainty = TRUE
     )
 
-bestcost_pm_yld_singlebhd_external_summary_uncertainty <- healthiar::include_summary_uncertainty(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
+bestcost_pm_yld_singlebhd_external_summary_uncertainty <- healthiar::include_summary_uncertainty(
+  bestcost_pm_yld_singlebhd_with_summary_uncertainty,
+    n_sim = 100)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 # View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
@@ -759,7 +769,9 @@ bestcost_noise_ha_ar_with_summary_uncertainty <-
     )
 # View(bestcost_noise_ha_ar_with_summary_uncertainty)
 
-bestcost_noise_ha_ar_external_uncertainty <- healthiar::include_summary_uncertainty(bestcost_noise_ha_ar_with_summary_uncertainty)
+bestcost_noise_ha_ar_external_uncertainty <- healthiar::include_summary_uncertainty(
+  bestcost_noise_ha_ar_with_summary_uncertainty,
+  n_sim = 100)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 print("Main estimate: ")
@@ -803,7 +815,9 @@ bestcost_noise_ha_ar_iteration <-
 # View(bestcost_noise_ha_ar_with_summary_uncertainty)
 
 bestcost_noise_ha_ar_iteration_with_summary_uncertainty <-
-  healthiar::include_summary_uncertainty(res = bestcost_noise_ha_ar_iteration)
+  healthiar::include_summary_uncertainty(
+    res = bestcost_noise_ha_ar_iteration,
+    n_sim = 100)
 
 # Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
 # View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
