Adapt example adding the arguments approach_risk, population and prop_pop_exp

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -1433,8 +1433,9 @@ comparison_singlebhd_rr_geo <-
 
 # Test delta comparison function with fake values
 # No PIF option in ar
-comparison_singlebhd_delta <-
+comparison_singlebhd_delta_ar <-
   healthiar::compare_health(
+    approach_risk = "absolute_risk",
     approach_comparison = "delta",
     exp_central_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
     exp_central_2 = c(50, 55, 60, 65, 75), # Fake values
@@ -1455,13 +1456,16 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
                result_vector_alternative = c(62531)) # Result on 23 May 2024
 
 comparison_singlebhd_ar_delta_geo <-
-  healthiar::compare_health_ar(
+  healthiar::compare_health(
     approach_risk = "absolute_risk",
     approach_comparison = "delta",
     exp_central_1 = list(c(57.5, 62.5, 67.5, 72.5, 77.5), c(57, 62, 67, 72, 77)),# Fake values
     exp_central_2 = list(c(50, 55, 60, 65, 75), c(50.5, 55.5, 60.5, 65.5, 75.5)), # Fake values
-    pop_exp_1 = list(c(387500, 286000, 191800, 72200, 7700), c(380000, 280000, 190800, 72000, 7000)), # Fake values
-    pop_exp_2 = list(c(387500, 286000, 191800, 72200, 7700), c(380000, 280000, 190800, 72000, 7000)), # Fake values
+    population_1 = list(945200, 929800),
+    prop_pop_exp_1 = list(c(387500, 286000, 191800, 72200, 7700)/945200, 
+                          c(380000, 280000, 190800, 72000, 7000)/929800), # Fake values
+    prop_pop_exp_2 = list(c(387500, 286000, 191800, 72200, 7700)/945200, 
+                          c(380000, 280000, 190800, 72000, 7000)/929800), # Fake values
     erf_eq_central = "78.9270-3.1162*c+0.0342*c^2",
     info_1 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2020),
     info_2 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2022),
