--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -1465,7 +1465,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta_geo ,
 
 ```
 
-```{r comparison yld singlebhd_rr}
+```{r comparison yld singlebhd_rr prevalence-based approach}
 # DELTA
 # Test delta comparison function with fake values
 comparison_yld_singlebhd_rr_delta <-
@@ -1583,6 +1583,119 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif_geo ,
 ```
 
 
+
+```{r comparison yld singlebhd_rr incidence-based approach}
+# DELTA
+# Test delta comparison function with fake values
+comparison_yld_singlebhd_rr_delta <-
+  healthiar::compare_yld_incidence_based_approach(
+    approach_comparison = "delta",
+    exp_central_1 = 8.85, 
+    exp_central_2 = 6,
+    cutoff_central = 5,    
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    dw_central = 0.5,
+    duration_central = 10,
+    info_1 = "PM2.5_yld_before",
+    info_2 = "PM2.5_yld_after")
+
+# View(comparison_yld_singlebhd_rr_delta)
+
+# No study to compare bestcost results
+# Check only if results stay the same overtime despite developments
+check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta,
+               result_vector_alternative = c(387*10, 205*10, 564*10)) # Result on 16 May 2024
+
+# Iteration
+comparison_yld_singlebhd_rr_delta_geo <-
+  healthiar::compare_yld_incidence_based_approach(
+    approach_comparison = "delta",
+    exp_central_1 = list(8.85, 8.0),
+    exp_central_2 = list(6, 6.5),
+    cutoff_central = 5,    
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    dw_central = 0.5,
+    duration_central = 10,
+    info_1 = "PM2.5_yld_before",
+    info_2 = "PM2.5_yld_after",
+    geo_id_raw = c("a", "b"),
+    geo_id_aggregated = rep("ch", 2))
+
+# View(comparison_yld_singlebhd_rr_delta_geo)
+
+# No study to compare bestcost results
+# Check only if results stay the same overtime despite developments
+check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta_geo ,
+               result_vector_alternative = c(591*10, 313*10, 861*10)) # Result on 26 June 2024
+
+
+#PIF
+# Test pif comparison function with fake values
+comparison_yld_singlebhd_rr_pif <-
+  healthiar::compare_yld_incidence_based_approach(
+    approach_comparison = "pif",
+    exp_central_1 = 8.85,  
+    exp_central_2 = 6,
+    cutoff_central = 5,    
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    dw_central = 0.5,
+    duration_central = 10,
+    info_1 = "PM2.5_yld_before",
+    info_2 = "PM2.5_yld_after")
+
+# View(comparison_yld_singlebhd_rr_pif)
+
+# No study to compare bestcost results
+# Check only if results stay the same overtime despite developments
+check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif ,
+               result_vector_alternative = c(391*10,206*10,573*10)) # Result on 16 May 2024
+
+# Iteration
+comparison_yld_singlebhd_rr_pif_geo <-
+  healthiar::compare_yld_incidence_based_approach(
+    approach_comparison = "pif",
+    exp_central_1 = list(8.85, 8.0),
+    exp_central_2 = list(6, 6.5),
+    cutoff_central = 5,    
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    dw_central = 0.5,
+    duration_central = 10,
+    info_1 = "PM2.5_yld_before",
+    info_2 = "PM2.5_yld_after",
+    geo_id_raw = c("a", "b"),
+    geo_id_aggregated = rep("ch", 2))
+
+# View(comparison_yld_singlebhd_rr_pif_geo)
+
+# No study to compare bestcost results
+# Check only if results stay the same overtime despite developments
+check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif_geo ,
+               result_vector_alternative = c(599*10, 315*10, 878*10)) # Result on 20 June 2024
+```
 
 ### Lifetable
 
